--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,6 +16,7 @@ header nav {
     justify-content: space-around;
     flex: 1;
     font-family: Roboto;
-    font-size: 24px;
+    font-weight: bold;
+    font-size: 20px;
     color: #FFFFFF;
 }
