modifications de style sur radar et bar charts + ajout modèle simpleline chart

--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -45,8 +45,11 @@ p {
 
 }
 
-#averageChart, #scoreChart{
+#averageChart, #scoreChart, #radarChart{
     width: 260px;
+}
+
+#averageChart, #scoreChart{
     background-color: blueviolet;
 }
 
