--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -19,12 +19,10 @@ p {
     height: fit-content;
     margin-right: 31px;
     flex: 1;
-    background-color: brown;
 }
 
 #summariesContainer {
     width: 258px;
-    background-color: blueviolet;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -33,11 +31,9 @@ p {
 #dailyActivityContainer{
     height: 260px;
     margin-bottom: 30px;
-    background-color: aqua;
 }
 
 #averageAndRadarAndScoreContainer{
-    background-color: yellowgreen;
     height: 260px;
     display: flex;
     gap: 30px;
@@ -49,10 +45,14 @@ p {
     width: 260px;
 }
 
-#averageChart, #scoreChart{
-    background-color: blueviolet;
+#averageChart {
+    background-color: #FF0000;
 }
 
 #radarChart {
     background-color: #282D30;
+}
+
+#scoreChart{
+    background-color: #FBFBFB;
 }
