--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -20,9 +20,9 @@
     font-family: Roboto;
     color: #FFFFFF;
     font-size: 12px;
+    transform: rotate(270deg);
     position: absolute;
-    writing-mode: sideways-lr;
-    bottom: 59px;
+    bottom: 100px;
 }
 
 @media (max-width: 1780px) {
